[package]
name = "ttysvr"
description = "Screensavers for your terminal."
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["cxreiff <cooper@cxreiff.com>"]
readme = "README.md"
repository = "https://github.com/cxreiff/ttysvr"
homepage = "https://github.com/cxreiff/ttysvr"
categories = ["command-line-interface"]
keywords = ["bevy", "ratatui", "terminal", "tui", "screensaver"]

[dependencies]
avian2d = "0.1.1"
bevy = "0.14.1"
bevy_ratatui = "0.6.2"
bevy_ratatui_render = "0.5.6"
clap = { version = "4.5.13", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
ratatui = "0.28.0"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "cxreiff/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# TEMP FOR CARGO-DIST PR
allow-dirty = ["ci", "msi"]

[workspace.metadata.dist.dependencies.apt]
libasound2-dev = "*"
libudev-dev = "*"
libwayland-dev = "*"
libxkbcommon-dev = "*"

